--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["src/ethereum-canister", "src/contracts-abi", "src/interface"]
+members = ["src/ethereum-lightclient-canister", "src/contracts-abi", "src/interface"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -9,10 +9,10 @@ ethers-contract = { version = "2.0.9", default-features = false, features = [
 ] }
 ethers-core = "2.0.9"
 eyre = "0.6.8"
-helios_client = { package = "client", git = "https://github.com/eigerco/helios", rev = "62c7237" }
-helios_common = { package = "common", git = "https://github.com/eigerco/helios", rev = "62c7237" }
-helios_config = { package = "config", git = "https://github.com/eigerco/helios", rev = "62c7237" }
-helios_execution = { package = "execution", git = "https://github.com/eigerco/helios", rev = "62c7237" }
+helios_client = { package = "client", git = "https://github.com/octopus-network/helios", rev = "62c7237" }
+helios_common = { package = "common", git = "https://github.com/octopus-network/helios", rev = "62c7237" }
+helios_config = { package = "config", git = "https://github.com/octopus-network/helios", rev = "62c7237" }
+helios_execution = { package = "execution", git = "https://github.com/octopus-network/helios", rev = "62c7237" }
 interface = { path = "src/interface" }
 
 [profile.release]
