--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "ethereum_canister"
+name = "ethereum_lightclient_canister"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+
 
 [lib]
 crate-type = ["cdylib"]
@@ -17,13 +18,13 @@ helios_common = { workspace = true }
 helios_config = { workspace = true }
 helios_execution = { workspace = true }
 interface = { workspace = true }
-
+ciborium = "0.2.1"
 candid = "0.9.2"
 getrandom = { version = "0.2.10", features = ["custom"] }
 ic-cdk = "0.10.0"
 ic-cdk-timers = "0.4.0"
 ic-logger = "0.1.0"
-ic-stable-structures = "0.5.6"
+ic-stable-structures = "0.6.5"
 log = "0.4.19"
 num-bigint = "0.4.3"
 rand = "0.8.5"
@@ -31,6 +32,7 @@ rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 serde = "1.0.183"
 serde_json = "1.0.104"
+anyhow = "1.0.72"
 
 [dev-dependencies]
 temp-dir = "0.1.11"
