--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -13,10 +13,9 @@ contracts-abi = { workspace = true }
 ethers-contract = { workspace = true }
 ethers-core = { workspace = true }
 eyre = { workspace = true }
-helios_client = { workspace = true }
 helios_common = { workspace = true }
 helios_config = { workspace = true }
-#helios_execution = { workspace = true }
+helios-consensus-core = {path = "../consensus/consensus-core"}
 interface = { workspace = true }
 ciborium = "0.2.1"
 candid = "0.9.2"
