--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -13,9 +13,11 @@ contracts-abi = { workspace = true }
 ethers-contract = { workspace = true }
 ethers-core = { workspace = true }
 eyre = { workspace = true }
+alloy.workspace = true
 helios_common = { workspace = true }
 helios_config = { workspace = true }
 helios-consensus-core = {path = "../consensus/consensus-core"}
+helios-consensus = {package = "consensus", path = "../consensus"}
 interface = { workspace = true }
 ciborium = "0.2.1"
 candid = "0.9.2"
@@ -32,6 +34,7 @@ rand_core = "0.6.4"
 serde = "1.0.183"
 serde_json = "1.0.104"
 anyhow = "1.0.72"
+async-trait = "0.1.86"
 
 [dev-dependencies]
 temp-dir = "0.1.11"
