--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -9,29 +9,26 @@ license = "Apache-2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-contracts-abi = { workspace = true }
-ethers-contract = { workspace = true }
-ethers-core = { workspace = true }
-eyre = { workspace = true }
-alloy.workspace = true
-helios_common = { workspace = true }
-helios_config = { workspace = true }
-helios-core = {path = "../core"}
-helios-consensus-core = {path = "../consensus/consensus-core"}
-helios-consensus = {package = "consensus", path = "../consensus"}
-interface = { workspace = true }
+#eyre = { workspace = true }
+#alloy.workspace = true
+#helios_common = { workspace = true }
+#helios_config = { workspace = true }
+#helios-core = {path = "../core"}
+#helios-consensus-core = {path = "../consensus/consensus-core"}
+#helios-consensus = {package = "consensus", path = "../consensus"}
+#interface = { workspace = true }
 ciborium = "0.2.1"
 candid = "0.9.2"
-getrandom = { version = "0.2.10", features = ["custom"] }
-ic-cdk = "0.10.0"
+#getrandom = { version = "0.2.10", features = ["custom", "js"] }
+ic-cdk = "0.11.0"
 ic-cdk-timers = "0.4.0"
 ic-logger = "0.1.0"
 ic-stable-structures = "0.6.5"
 log = "0.4.19"
 num-bigint = "0.4.3"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
-rand_core = "0.6.4"
+#rand = "0.8.5"
+#rand_chacha = "0.3.1"
+#rand_core = "0.6.4"
 serde = "1.0.183"
 serde_json = "1.0.104"
 anyhow = "1.0.72"
