--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -12,11 +12,11 @@ crate-type = ["cdylib"]
 #eyre = { workspace = true }
 #alloy.workspace = true
 #helios_common = { workspace = true }
-#helios_config = { workspace = true }
-#helios-core = {path = "../core"}
-#helios-consensus-core = {path = "../consensus/consensus-core"}
-#helios-consensus = {package = "consensus", path = "../consensus"}
-#interface = { workspace = true }
+helios_config = { workspace = true }
+helios-core = {path = "../core"}
+helios-consensus-core = {path = "../consensus/consensus-core"}
+helios-consensus = {package = "consensus", path = "../consensus"}
+
 ciborium = "0.2.1"
 candid = "0.9.2"
 #getrandom = { version = "0.2.10", features = ["custom", "js"] }
