--- a/src/consensus/consensus-core/Cargo.toml
+++ b/src/consensus/consensus-core/Cargo.toml
@@ -4,14 +4,7 @@ name = "helios-consensus-core"
 edition = "2021"
 
 [dependencies]
-alloy = { version = "0.9.1", features = [
-    "consensus",
-    "rpc-types",
-    "ssz",
-    "rlp",
-    "k256",
-    "eips",
-] }
+alloy.workspace = true
 alloy-rlp = "0.3.10"
 bls12_381.workspace = true
 ssz_types.workspace = true
@@ -29,7 +22,6 @@ tracing.workspace = true
 zduny-wasm-timer.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.2", features = ["js"] }
 wasmtimer = "0.2.0"
 
 [dev-dependencies]
