--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 eyre = { workspace = true }
-#alloy.workspace = true
+alloy.workspace = true
 helios_common = { workspace = true }
 helios_config = { workspace = true }
 helios-core = {path = "../core"}
@@ -26,9 +26,9 @@ ic-logger = "0.1.0"
 ic-stable-structures = "0.6.5"
 log = "0.4.19"
 num-bigint = "0.4.3"
-#rand = "0.8.5"
-#rand_chacha = "0.3.1"
-#rand_core = "0.6.4"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
+rand_core = "0.6.4"
 serde = "1.0.183"
 serde_json = "1.0.104"
 anyhow = "1.0.72"
@@ -63,7 +63,7 @@ typenum.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.37"
-getrandom = { version = "0.2.1", features = ["js"] }
+getrandom = { version = "0.2.8", features = ["js"] }
 
 
 [target.wasm32-unknown-unknown.dependencies]
