--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -10,12 +10,12 @@ crate-type = ["cdylib"]
 
 [dependencies]
 eyre = { workspace = true }
-alloy.workspace = true
+
 helios_common = { workspace = true }
-helios_config = { workspace = true }
-helios-core = {path = "../core"}
-helios-consensus-core = {path = "../consensus/consensus-core"}
-helios-consensus = {package = "consensus", path = "../consensus"}
+#helios_config = { workspace = true }
+#helios-core = {path = "../core"}
+#helios-consensus-core = {path = "../consensus/consensus-core"}
+#helios-consensus = {package = "consensus", path = "../consensus"}
 
 ciborium = "0.2.1"
 candid = "0.9.2"
@@ -36,9 +36,7 @@ async-trait = "0.1.86"
 
 
 # consensus
-alloy-trie.workspace = true
 tree_hash.workspace = true
-revm.workspace = true
 
 # config
 figment = { version = "0.10.7", features = ["toml", "env"] }
@@ -51,11 +49,9 @@ tokio.workspace = true
 futures.workspace = true
 
 # io
-reqwest.workspace = true
 
 hex.workspace = true
 tracing.workspace = true
-chrono.workspace = true
 thiserror.workspace = true
 superstruct.workspace = true
 retri.workspace = true
