--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -16,7 +16,7 @@ helios_common = { workspace = true }
 #helios-core = {path = "../core"}
 #helios-consensus-core = {path = "../consensus/consensus-core"}
 #helios-consensus = {package = "consensus", path = "../consensus"}
-
+ssz_types.workspace = true
 ciborium = "0.2.1"
 candid = "0.9.2"
 #getrandom = { version = "0.2.10", features = ["custom", "js"] }
@@ -56,6 +56,7 @@ thiserror.workspace = true
 superstruct.workspace = true
 retri.workspace = true
 typenum.workspace = true
+sha2 = "0.10.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.37"
