--- a/src/tree_hash/Cargo.toml
+++ b/src/tree_hash/Cargo.toml
@@ -20,6 +20,7 @@ hex = "0.4"
 serde = "1.0.183"
 serde_json = "1.0.104"
 derive_more = "1"
+ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
 [dev-dependencies]
 rand = "0.8.5"
 tree_hash_derive = { path = "../tree_hash_derive", version = "0.9.0" }
