--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -14,12 +14,14 @@ helios_common = { workspace = true }
 #helios_config = { workspace = true }
 ssz_types.workspace = true
 ciborium = "0.2.1"
-candid = "0.9.2"
+candid.workspace = true
 #getrandom = { version = "0.2.10", features = ["custom", "js"] }
-ic-cdk = "0.11.0"
-ic-cdk-timers = "0.4.0"
-ic-logger = "0.1.0"
+ic-cdk.workspace = true
+ic-cdk-timers = "=0.9.0"
+time = "0.3.36"
 ic-stable-structures = "0.6.5"
+ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
+ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
 log = "0.4.19"
 num-bigint = "0.4.3"
 rand = "0.8.5"
@@ -54,6 +56,7 @@ superstruct.workspace = true
 retri.workspace = true
 typenum.workspace = true
 sha2.workspace = true
+serde_derive = "1.0.218"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.37"
