--- a/src/ssz_types/Cargo.toml
+++ b/src/ssz_types/Cargo.toml
@@ -15,6 +15,9 @@ tree_hash = {path = "../tree_hash"}
 ethereum_serde_utils = "0.7.0"
 ethereum_ssz = "0.8"
 serde = "1.0.0"
+serde_json = "1"
+candid_derive = "0.6.6"
+candid.workspace = true
 serde_derive = "1.0.0"
 typenum = "1.12.0"
 smallvec = "1.8.0"
