--- a/src/tree_hash/Cargo.toml
+++ b/src/tree_hash/Cargo.toml
@@ -18,7 +18,9 @@ typenum = "1.12.0"
 getrandom = { version = "0.2.8", features = ["js"] }
 hex = "0.4"
 serde = "1.0.183"
+candid.workspace = true
 serde_json = "1.0.104"
+candid_derive = "0.6.6"
 derive_more = "1"
 ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
 [dev-dependencies]
