--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,24 +19,9 @@ ethereum_ssz_derive = "0.8"
 ethereum_ssz = "0.8"
 tree_hash_derive = {path = "src/tree_hash_derive"}
 tree_hash = { path = "src/tree_hash"}
-sha2 = "0.9"
-bls12_381 = { version = "0.8.0", features = ["experimental","groups", "pairings", "alloc"], default-features = false }
+sha2 = "0.10.8"
+ic_bls12_381 = { version = "0.10.0", features = ["experimental", "zeroize"] }
 
-# execution
-alloy = { version = "0.11.1", features = [
-  "rpc-types",
-  "consensus",
-  "rlp",
-  "k256",
-  "provider-http",
-  "sol-types",
-  "network",
-  "ssz",
-  "json-rpc",
-  "signers",
-] }
-alloy-trie = "0.7.8"
-op-alloy-rpc-types = "0.9.0"
 revm = { version = "19.4.0", default-features = false, features = [
   "std",
   "serde",
@@ -48,9 +33,7 @@ revm = { version = "19.4.0", default-features = false, features = [
 async-trait = "0.1.57"
 futures = "0.3.23"
 tokio = { version = "1", features = ["rt", "sync", "macros"] }
-
 candid = {version = "0.10"}
-
 # io
 url = { version = "2.5.2", features = ["serde"] }
 serde = { version = "1.0.143", features = ["derive"] }
