--- a/src/tree_hash/Cargo.toml
+++ b/src/tree_hash/Cargo.toml
@@ -21,7 +21,7 @@ serde = "1.0.183"
 candid.workspace = true
 serde_json = "1.0.104"
 candid_derive = "0.6.6"
-derive_more = "1"
+derive_more = { version = "1", features = ["full"] }
 ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
 [dev-dependencies]
 rand = "0.8.5"
