--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,7 @@ ethereum_ssz = "0.8"
 tree_hash_derive = {path = "src/tree_hash_derive"}
 tree_hash = { path = "src/tree_hash"}
 sha2 = "0.10.8"
-ic_bls12_381 = { version = "0.10.0", features = ["experimental", "zeroize"] }
-
+ic_bls12_381 = { version = "0.10.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental", "zeroize"] }
 revm = { version = "19.4.0", default-features = false, features = [
   "std",
   "serde",
