--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ ic-cdk = "0.12.2"
 ssz_types = {path = "src/ssz_types"}
 ethereum_ssz_derive = "0.8"
 ethereum_ssz = "0.8"
-tree_hash_derive = {path = "src/tree_hash_derive"}
+tree_hash_derive = {version = "0.9.0"}
 tree_hash = { path = "src/tree_hash"}
 sha2 = "0.10.8"
 ic_bls12_381 = { version = "0.10.0", default-features = false, features = ["groups", "pairings", "alloc", "experimental", "zeroize"] }
