--- a/src/ethereum-oracle/Cargo.toml
+++ b/src/ethereum-oracle/Cargo.toml
@@ -19,7 +19,6 @@ ic-cdk-timers = "=0.9.0"
 ic-stable-structures = "0.6.5"
 ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
 
-ethers-core = { version = "=2.0.8",default-features = false}
 getrandom = { version = "0.2.10", features = ["custom", "js"] }
 serde = "1.0.183"
 serde_json = "1.0.104"
@@ -30,4 +29,7 @@ tree_hash.workspace = true
 hex.workspace = true
 thiserror.workspace = true
 serde_derive = "1.0.218"
+rlp = "0.6.1"
+triehash-ethereum = { git = "https://github.com/openethereum/parity-ethereum", rev = "55c90d4016505317034e3e98f699af07f5404b63" }
+#primitive-types = {version = "0.13.1",default-features = false, features = ["serde", "rlp"] }
 #cketh-common = { git = "https://github.com/dfinity/ic", package = "ic-cketh-minter" }
