--- a/src/tree_hash/Cargo.toml
+++ b/src/tree_hash/Cargo.toml
@@ -23,6 +23,8 @@ serde_json = "1.0.104"
 candid_derive = "0.6.6"
 derive_more = { version = "1", features = ["full"] }
 ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
+rlp = "0.6.1"
+
 [dev-dependencies]
 rand = "0.8.5"
 tree_hash_derive = { version = "0.9.0" }
