--- a/src/ethereum-lightclient-canister/Cargo.toml
+++ b/src/ethereum-lightclient-canister/Cargo.toml
@@ -34,7 +34,7 @@ ethereum_ssz.workspace = true
 ruint = {version = "1.12.3", default-features = false, features = ["alloc"]}
 # consensus
 tree_hash.workspace = true
-
+flate2 = { version = "1.0", features = ["zlib"] }
 # config
 figment = { version = "0.10.7", features = ["toml", "env"] }
 serde_yaml = "0.9.14"
@@ -55,6 +55,7 @@ retri.workspace = true
 typenum.workspace = true
 sha2.workspace = true
 serde_derive = "1.0.218"
+
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.37"
