--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -16,6 +16,7 @@ rlp = "0.6.1"
 ssz_types.workspace = true
 tree_hash.workspace = true
 tree_hash_derive.workspace = true
+log = "0.4.26"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 ic-cdk.workspace = true
